feat(glos): updated docs in creates

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,4 +1,9 @@
 # Glos CODEOWNERS
 
-/src/ @MiCkEyZzZ
+# Назначение владельца (ответственного) для разных частей проекта.
+
+# ================================
+# Основной код
+# ================================
+/glos-core/ @MiCkEyZzZ
 /.github/workflows/ @MiCkEyZzZ
