feat(glos-replayer): added a basic replay implementation to glos-replayer

--- a/glos-recorder/Cargo.toml
+++ b/glos-recorder/Cargo.toml
@@ -12,6 +12,7 @@ publish = false
 
 [dependencies]
 glos-core = { path = "../glos-core" }
+glos-types = { path = "../glos-types" }
 
 clap = { workspace = true }
 crossbeam-channel = { workspace = true }
