--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,14 +14,18 @@ members = [
     "glos-replayer",
     "glos-analyzer",
     "glos-cli",
+    "glos-types",
+    "benches",
 ]
 
 # Общие зависимости (опционально)
 [workspace.dependencies]
 anyhow = "1.0"
+criterion = { version = "0.6.0", features = ["async"] }
 crossbeam-channel = "0.5"
 env_logger = "0.11"
 hackrfone = "0.4.0"
+libc = "0.2"
 log = "0.4"
 lz4 = "1.28.1"
 lz4_flex = { version = "0.12", default-features = false }
