--- a/glos-core/Cargo.toml
+++ b/glos-core/Cargo.toml
@@ -15,6 +15,8 @@ name = "glos_core"
 path = "src/lib.rs"
 
 [dependencies]
+glos-types = { path = "../glos-types" }
+
 byteorder = { workspace = true }
 crc32fast = { workspace = true }
 lz4 = { workspace = true }
@@ -23,4 +25,3 @@ rand = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 tempfile = { workspace = true }
-thiserror = { workspace = true }
